objects/FAQ__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this FAQ is active (inactive FAQs are not displayed in community)</description>
        <inlineHelpText>Indicates if this FAQ is active (inactive FAQs are not displayed in community)</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllContactRecordTypes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this FAQ will show up for contacts of all record types.  If this is checked, you cannot have a Contact Record Type indicator.</description>
        <inlineHelpText>If checked, this FAQ will show up for contacts of all record types.  If this is checked, you cannot have a Contact Record Type indicator.</inlineHelpText>
        <label>All Contact Record Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Answer to the Question</description>
        <inlineHelpText>Answer to the Question</inlineHelpText>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommunityName__c</fullName>
        <description>Community name to which this FAQ belongs.  Determines in which community the FAQ displays.</description>
        <inlineHelpText>Community name to which this FAQ belongs.  Determines in which community the FAQ displays.</inlineHelpText>
        <label>Community Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactRecordType__c</fullName>
        <description>If this FAQ is specific to a certain contact record type, indicate here.  FAQs will only appear to contacts of this record type in the community.</description>
        <inlineHelpText>If this FAQ is specific to a certain contact record type, indicate here.  FAQs will only appear to contacts of this record type in the community.</inlineHelpText>
        <label>Contact Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>End Client</fullName>
                </value>
                <value>
                    <fullName>Rep/Contact</fullName>
                </value>
                <value>
                    <fullName>Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HeaderText__c</fullName>
        <description>The header text under which an FAQ will display.  Only available on record types of header.</description>
        <inlineHelpText>The header text under which an FAQ will display</inlineHelpText>
        <label>Header Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The header to which this FAQ belongs.</description>
        <inlineHelpText>The header to which this FAQ belongs.  If there is no value in this field, FAQ will appear at the top of the page without a header.</inlineHelpText>
        <label>Header</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Headers have a record type of Header</errorMessage>
            <filterItems>
                <field>FAQ__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Header</value>
            </filterItems>
            <infoMessage>Headers have a record type of Header</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FAQ__c</referenceTo>
        <relationshipLabel>FAQs</relationshipLabel>
        <relationshipName>FAQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Question</description>
        <inlineHelpText>Question</inlineHelpText>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <description>Determines the sort order of FAQs; if multiple FAQs have the same sort order, the display of FAQs will be dependent on which FAQ the database returns first.</description>
        <inlineHelpText>Determines the sort order of FAQs; if multiple FAQs have the same sort order, the display of FAQs will be dependent on which FAQ the database returns first.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>Used to capture Frequently Asked Questions for communities.</description>
    <label>FAQ</label>
    <nameField>
        <displayFormat>FAQ-{0000000}</displayFormat>
        <label>FAQ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CommunityName__c</columns>
        <columns>Active__c</columns>
        <columns>SortOrder__c</columns>
        <columns>AllContactRecordTypes__c</columns>
        <columns>ContactRecordType__c</columns>
        <columns>HeaderText__c</columns>
        <columns>Question__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Details</fullName>
        <columns>NAME</columns>
        <columns>CommunityName__c</columns>
        <columns>Active__c</columns>
        <columns>SortOrder__c</columns>
        <columns>AllContactRecordTypes__c</columns>
        <columns>ContactRecordType__c</columns>
        <columns>HeaderText__c</columns>
        <columns>Question__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FAQ__c.FAQ</value>
        </filters>
        <label>Details</label>
    </listViews>
    <listViews>
        <fullName>Headers</fullName>
        <columns>NAME</columns>
        <columns>CommunityName__c</columns>
        <columns>Active__c</columns>
        <columns>SortOrder__c</columns>
        <columns>AllContactRecordTypes__c</columns>
        <columns>ContactRecordType__c</columns>
        <columns>HeaderText__c</columns>
        <columns>Question__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FAQ__c.Header</value>
        </filters>
        <label>Headers</label>
    </listViews>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <description>Use this for Frequently Asked Questions (FAQs)</description>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Header</fullName>
        <active>true</active>
        <description>Use this for headers under which FAQs appear</description>
        <label>Header</label>
    </recordTypes>
    <validationRules>
        <fullName>FAQs_Either_All_or_Contact_Rec_Type</fullName>
        <active>true</active>
        <description>FAQs must apply to All Contact Record Types or a single record type - not both.</description>
        <errorConditionFormula>AllContactRecordTypes__c &amp;&amp; 
NOT(ISBLANK(TEXT( ContactRecordType__c)))</errorConditionFormula>
        <errorMessage>FAQs must apply to All Contact Record Types or a single record type - not both.</errorMessage>
    </validationRules>
</CustomObject>